different colors for debit/credit, suppress all-zero-datasets

--- a/app/views/risk_classes/edit.html.erb
+++ b/app/views/risk_classes/edit.html.erb
@@ -8,8 +8,12 @@
     <%= f.text_field :name %>
   </p>
   <p>
-    <%= f.label :color %><br />
-    <%= f.text_field :color %>
+    <%= f.label :credit_color %><br />
+    <%= f.text_field :credit_color %>
+  </p>
+  <p>
+    <%= f.label :debit_color %><br />
+    <%= f.text_field :debit_color %>
   </p>
   <p>
     <%= f.submit "Update" %>
