--- a/app/views/risk_classes/show.html.erb
+++ b/app/views/risk_classes/show.html.erb
@@ -4,8 +4,13 @@
 </p>
 
 <p>
-  <b>Color:</b>
-  <%=h @risk_class.color %>
+  <b>Credit Color:</b>
+  <%=h @risk_class.credit_color %>
+</p>
+
+<p>
+  <b>Debit Color:</b>
+  <%=h @risk_class.debit_color %>
 </p>
 
 
