account/entry type names in grid and combo boxes in form, collapsable grouping

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,5 +1,7 @@
 <% content_for :head do %>
+  <%= stylesheet_link_tag    'entry.css' %>
   <%= javascript_include_tag 'ext_scaffold/entry.js' %>
+  
   <% javascript_tag do %>
     Ext.onReady(function() {
 
@@ -9,7 +11,9 @@
       var vp = new Ext.Viewport({
         layout: 'fit',
         items: new ExtScaffold.Entry({
-          url: '<%= entries_path %>'
+          url: '<%= entries_path %>',
+          accountNamesStore: <%= Account.all.collect {|a| [a.id, a.name] }.to_json %>,
+          entryTypeNamesStore: <%= EntryType.all.collect {|t| [t.id, t.name] }.to_json %>
           <%= ",baseParams: { #{request_forgery_protection_token}: '#{form_authenticity_token}' }" if protect_against_forgery? %>
         })
       });
