--- a/app/views/balance_sheet/index.html.erb
+++ b/app/views/balance_sheet/index.html.erb
@@ -1,1 +1,9 @@
-<img src="<%=h google_chart_url(@dataset, @colors) %>" />
+<div id="chart">
+  <img src="<%=h google_chart_url(@dataset, @colors) %>" />
+</div>
+<p>
+  <%= link_to "Edit entries...", entries_path %> |
+  <%= link_to "Edit accounts...", accounts_path %> |
+  <%= link_to "Edit entry types...", entry_types_path %> |
+  <%= link_to "Edit risk classes...", risk_classes_path %>
+</p>
