provide correctly formatted currency values in Entries scaffold

--- a/app/views/layouts/entries.html.erb
+++ b/app/views/layouts/entries.html.erb
@@ -9,6 +9,7 @@
   <%= stylesheet_link_tag    "ext_scaffold", "../ext/resources/css/ext-all.css", "entry" %>
   <%= javascript_include_tag "../ext/adapter/ext/ext-base.js",
                              Rails.env.development? ? "../ext/ext-all-debug.js" : "../ext/ext-all.js",
+                             "application.js",
                              "ext_scaffold.js",
                              "fixed-numberfield.js",
                              "ext-ux-xdatefield.js",
