renamed google_chart_url to balances_by_risk_class_chart_url

--- a/app/views/balance_sheet/index.html.erb
+++ b/app/views/balance_sheet/index.html.erb
@@ -1,5 +1,5 @@
 <div id="chart">
-  <img src="<%=h google_chart_url(@dataset, @colors) %>" />
+  <img src="<%=h balances_by_risk_class_chart_url(@dataset, @colors) %>" />
 </div>
 <p>
   <%= link_to "Edit entries...", entries_path %> |
