completed future payments chart

--- a/app/views/balance_sheet/index.html.erb
+++ b/app/views/balance_sheet/index.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <div id="balances-by-risk-class-chart">
-  <img src="<%=h balances_by_risk_class_chart_url(@dataset, @colors) %>" />
+  <img src="<%=h balances_by_risk_class_chart_url(@balances_dataset, @colors) %>" />
 </div>
 <div id="future-payments-chart">
-  <img src="<%=h future_payments_chart_url(@dataset) %>" />
+  <img src="<%=h future_payments_chart_url(@future_payments_dataset) %>" />
 </div>
