add show_balance_as_future_payment flag to Account and adjust behaviour accordingly

--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -12,6 +12,10 @@
     <%= f.check_box :liability %>
   </p>
   <p>
+    <%= f.label :show_balance_as_future_payment %><br />
+    <%= f.check_box :show_balance_as_future_payment %>
+  </p>
+  <p>
     <%= f.label :risk_class_id %><br />
     <%= f.text_field :risk_class_id %>
   </p>
