--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -9,6 +9,11 @@
 </p>
 
 <p>
+  <b>Show balance as future payment?:</b>
+  <%=h @account.show_balance_as_future_payment %>
+</p>
+
+<p>
   <b>Risk class:</b>
   <%=h @account.risk_class_id %>
 </p>
