add chart for balance distribution across account classes

--- a/app/views/balance_sheet/index.html.erb
+++ b/app/views/balance_sheet/index.html.erb
@@ -5,9 +5,12 @@
   <%= link_to "Edit risk classes...", risk_classes_path %>
 </p>
 
-<div id="balances-by-risk-class-chart">
+<div id="balances-by-risk-class-chart" style="padding-bottom:20px">
   <img src="<%=h balances_by_risk_class_chart_url(@balances_dataset, @colors) %>" />
 </div>
-<div id="future-payments-chart">
+<div id="future-payments-chart" style="float:left">
   <img src="<%=h future_payments_chart_url(@future_payments_dataset) %>" />
+</div>
+<div id="balances-by-account-class-chart">
+  <img src="<%=h balances_by_account_class_chart_url(@account_class_dataset) %>" />
 </div>
