add link to account_classes scaffold

--- a/app/views/balance_sheet/index.html.erb
+++ b/app/views/balance_sheet/index.html.erb
@@ -1,6 +1,7 @@
 <p>
   <%= link_to "Edit entries...", entries_path %> |
   <%= link_to "Edit accounts...", accounts_path %> |
+  <%= link_to "Edit account classes...", account_classes_path %> |
   <%= link_to "Edit entry types...", entry_types_path %> |
   <%= link_to "Edit risk classes...", risk_classes_path %>
 </p>
