add color attribute to AccountClass and use in chart

--- a/app/views/account_classes/show.html.erb
+++ b/app/views/account_classes/show.html.erb
@@ -2,6 +2,10 @@
   <b>Name:</b>
   <%=h @account_class.name %>
 </p>
+<p>
+  <b>Color:</b>
+  <%=h @account_class.color %>
+</p>
 
 
 <%= link_to 'Edit', edit_account_class_path(@account_class) %> |
