--- a/app/views/account_classes/index.html.erb
+++ b/app/views/account_classes/index.html.erb
@@ -3,11 +3,13 @@
 <table>
   <tr>
     <th>Name</th>
+    <th>Color</th>
   </tr>
 
 <% for account_class in @account_classes %>
   <tr>
     <td><%=h account_class.name %></td>
+    <td><%=h account_class.color %></td>
     <td><%= link_to 'Show', account_class %></td>
     <td><%= link_to 'Edit', edit_account_class_path(account_class) %></td>
     <td><%= link_to 'Destroy', account_class, :confirm => 'Are you sure?', :method => :delete %></td>
